# rivas

./: .gitignore  Cargo.toml  LICENSE.md  README.md  test.S
Ada/rivas/: rivas.adb
Rust/rivas/: Cargo.toml  test.S
Rust/rivas/src/: assembler.rs  binary.rs  main.rs
src/: assembler.rs  binary.rs  main.rs
