[package]
name = "rivas"
version = "0.1.7"
edition = "2021"
authors = ["Yannick Reiß yannick.reiss@protonmail.ch"]
description = "RISC-V Assembler: currently not on a working state."
repository = "https://github.com/yannickreiss/rivas"
license = "MIT-license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

