[package]
name = "rivas"
version = "0.1.6"
edition = "2021"
authors = ["Yannick Reiß yannick.reiss@protonmail.ch"]
description = "RISC-V Assembler: currently not on a working state."
repository = "https://gitlab.cs.hs-rm.de/yreis001/rivas"
license = "WTFPL"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
